[package]
name = "delete_images_from_zips"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
zip = { version = "7", default-features = false, features = ["deflate"] }
serde_json = "1.0"
tempfile = "3.10"
filetime = "0.2"
thiserror = "1.0"
exif = { version = "0.6", package = "kamadak-exif" }
png = "0.17"
anyhow = "1.0"
rayon = "1.8"
regex = "1.10"
indicatif = "0.17"
