[package]
name = "delete_images_from_zips"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
serde_json = "1.0"
tempfile = "3.10"
filetime = "0.2"
thiserror = "1.0"
exif = { version = "0.6", package = "kamadak-exif" }
png = "0.17"
anyhow = "1.0"
rayon = "1.8"
regex = "1.10"
indicatif = "0.17"
signal-hook = "0.3"
sha2 = "0.10"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
jpegxl-rs = { version = "0.12.0", default-features = false, features = ["vendored"] }
webp = { version = "0.3.1", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
libloading = "0.8"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-foundation = { version = "0.3.2", features = ["CFDictionary", "CFNumber"] }
objc2-core-media = { version = "0.3.2", features = ["CMBlockBuffer", "CMFormatDescription", "CMSampleBuffer", "CMTime"] }
objc2-core-video = { version = "0.3.2", features = ["CVPixelBuffer"] }
objc2-video-toolbox = { version = "0.3.2", features = ["VTCompressionSession", "VTSession", "VTErrors", "VTCompressionProperties", "objc2-core-media", "objc2-core-video"] }
